--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;500;700&display=swap" rel="stylesheet">
-        <title>Modele</title>
+        <title>Currencies Converter</title>
     </head>
     <body>
         <div id="root"></div>
